# AeroStats

./: .env.example  .gitignore  README.md  locations_air_gradient.csv  locations_else.csv  pyproject.toml  requirements.txt
scripts/: __init__.py  data_utils.py  infer_lstm.py  openaq_client.py  train_lstm.py
scripts/artifacts/: lstm_air_quality.keras  metadata.json  x_scaler.joblib  y_scaler.joblib
telegram_bot/: __init__.py  agent.py  bot.py
web/: app.jsx  index.html  server.py  styles.css
