[project]
name = "aerostat"
version = "0.1.0"
description = "Smart City air-quality forecasting platform for Almaty"
requires-python = ">=3.12"

dependencies = [
    "aiogram>=3.4",
    "flask>=3.0",
    "joblib>=1.3",
    "numpy>=1.26",
    "openai>=1.40",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "scikit-learn>=1.4",
    "tensorflow>=2.16"
]

[tool.vercel]
entrypoint = "web.server:app"
